:iphone: Fix elements list overlap in small screens

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -5,3 +5,7 @@
   display table
   table-layout: fixed
   width: 100%
+
+  th, td
+    text-overflow: ellipsis;
+    overflow: hidden;
